k8s/depl_svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hansoom-deployment
  namespace: hansoom
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-hansoom
  template:
    metadata:
      labels:
        app: my-hansoom
    spec:
      containers:
      - name: my-hansoom
        image: 346903264902.dkr.ecr.ap-northeast-2.amazonaws.com/hansoom/hansoom-be:latest
        ports:
        - containerPort: 8080
        resources:
          # 컨테이너가 사용할 수 있는 리소스의 최대치
          limits:
            cpu: "1"
            memory: "500Mi"
          # 컨테이너가 시작될 때, 보장 받아야 하는 최소자원
          requests: 
            cpu: "0.5"
            memory: "250Mi"
        readinessProbe:
          httpGet:
            # healthcheck 경로
            path: /health
            port: 8080
          # 컨테이너 시작 후 지연
          initialDelaySeconds: 10
          # 확인 반복 주기
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: hansoom-service
  namespace: hansoom
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: my-hansoom
